# DMOSpeech2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: ctcmodel.py  discriminator_conformer.py  dmd_trainer.py  duration_predictor.py  duration_trainer.py  duration_trainer_with_prompt.py  ecapa_tdnn.py  grpo_duration_trainer.py  guidance_model.py  infer.py  unimodel.py
src/dmospeech2/: ctcmodel.py  demo.ipynb  discriminator_conformer.py  dmd_trainer.py  duration_predictor.py  duration_trainer.py  duration_trainer_with_prompt.py  ecapa_tdnn.py  grpo_duration_trainer.py  guidance_model.py  infer.py  unimodel.py
src/f5_tts/: api.py  socket_client.py  socket_server.py
src/f5_tts/eval/: ecapa_tdnn.py  eval_infer_batch.py  eval_librispeech_test_clean.py  eval_seedtts_testset.py
src/f5_tts/infer/: infer_cli.py  infer_gradio.py  speech_edit.py  utils_infer.py
src/f5_tts/model/: cfm.py  dataset.py  modules.py  trainer.py  utils.py
src/f5_tts/model/backbones/: dit.py  mmdit.py  unett.py
src/f5_tts/model_new/: __init__.py  cfm.py  modules.py  trainer.py  utils.py
src/f5_tts/model_new/backbones/: dit.py  mmdit.py  unett.py
src/f5_tts/runtime/triton_trtllm/: benchmark.py
src/f5_tts/runtime/triton_trtllm/patch/: __init__.py
src/f5_tts/runtime/triton_trtllm/patch/f5tts/: model.py  (+1 more)
src/f5_tts/scripts/: count_params_gflops.py
src/f5_tts/train/: finetune_cli.py  finetune_gradio.py
src/f5_tts/train/datasets/: prepare_csv_wavs.py  prepare_emilia.py  prepare_emilia_v2.py  prepare_libritts.py  prepare_ljspeech.py  prepare_wenetspeech4tts.py
(+1 files in other folders)
