[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmospeech2"
version = "0.1.0"
description = "DMOSpeech 2 - Reinforcement learning for duration prediction in speech synthesis"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Yinghao Aaron Li", email = "71044569+yl4579@users.noreply.github.com"}]
dependencies = [
    "accelerate>=0.33.0",
    "bitsandbytes>0.37.0",
    "cached_path",
    "click",
    "datasets",
    "ema_pytorch>=0.5.2",
    "gradio>=3.45.2",
    "hydra-core>=1.3.0",
    "jieba",
    "librosa",
    "matplotlib",
    "numpy<=1.26.4",
    "pydantic<=2.10.6",
    "pydub",
    "pypinyin",
    "safetensors",
    "soundfile",
    "tomli",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "transformers_stream_generator",
    "unidecode",
    "vocos",
    "wandb",
    "x_transformers>=1.31.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"f5_tts" = [
  "data/Emilia_ZH_EN_pinyin/vocab.txt",
  "data/librispeech_pc_test_clean_cross_sentence.lst",
]
